--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     compile 'com.android.support:design:24.1.1'
     compile 'com.google.android.gms:play-services-analytics:9.4.0'
     compile 'com.google.android.gms:play-services-auth:9.4.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
+
 }
