--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -26,9 +26,8 @@ repositories {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile('com.github.afollestad.material-dialogs:core:0.8.5.3@aar') {
-        transitive = true
-    }
+    compile 'com.afollestad.material-dialogs:core:0.9.0.0'
+
     compile('com.rengwuxian.materialedittext:library:1.7.1') {
         exclude group: 'com.nineoldandroids'
     }
@@ -49,6 +48,7 @@ dependencies {
     compile 'com.android.support:design:24.1.1'
     compile 'com.google.android.gms:play-services-analytics:9.4.0'
     compile 'com.google.android.gms:play-services-auth:9.4.0'
+    compile 'com.github.clans:fab:1.6.4'
     compile 'com.getbase:floatingactionbutton:1.10.1'
 
 }
