--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -50,5 +50,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:9.4.0'
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.jaredrummler:material-spinner:1.1.0'
+
 
 }
